Convert columns to a QHash rather than a QVector in ExtraModelProxy

Previously number of columns was allocated to be the same as the number of rows which makes no sense
which caused a crash when the source model had no rows and a column was added.

BUG:295060